Assembler/tests/broken_asm/nojump.asm
stms s0, 8201 # 4
jmp 2
stms s0, 8210 # 6
